# cmake-init

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  README.md
.cache/clangd/index/: CMakeLists_txt.hpp.2BE60974C41919F3.idx  _gitignore.hpp.E95CA536516542C6.idx  cxxopts.hpp.C06407CAB090BDDE.idx  fstream.h.657AAAD53983C4D7.idx  main.cpp.59D2D2C198DA5EE1.idx  src_main_cpp.hpp.E88E761A68909A46.idx
.github/workflows/: cmake.yml  rust.yml
files/: CMakeLists.txt
files/cuda/: CMakeLists.txt  kernel.cu  main.cu
files/hip/: CMakeLists.txt  kernel.hip  main.hip
files/mpi/: CMakeLists.txt  main.cpp
include/: fstream.h
include/files/: CMakeLists.txt  CMakeLists_txt.h  CMakeLists_txt.hpp  _gitignore.h  _gitignore.hpp  main.cpp  src_main_cpp.h  src_main_cpp.hpp
script/: install.sh
src/: _gitignore.rs  cmakelists.rs  cmakelists_txt.rs  features.rs  git.rs  lib.rs  main.cpp  main.rs  sources.rs  src_main_cpp.rs
tests/: cleanup_on_failure.rs
